Rollbacking tests to maven verifier